# pi-admin

./: README.md
generic-watcher/: Cargo.toml  README.md  generic-watcher.service
generic-watcher/src/: main.rs
pihole/: hosts
telegraf-scripts/: README.md  systemp.sh
telegraf-watcher/: Cargo.toml  README.md  telegraf-watcher.service
telegraf-watcher/src/: main.rs
weatherman/: .gitignore  Cargo.toml  README.md
weatherman/src/: main.rs
