[package]
name = "weatherman"
version = "0.1.0"
authors = ["Mike Mahoney <mike.mahoney.218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
geojson= "*"